Changing design of main page.

--- a/fr/index.html
+++ b/fr/index.html
@@ -5,117 +5,121 @@ title: Cyril MOINEAU
 	<div class="blurb">
 		<div id="presentation">
 		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
-		<h1>Cyril MOINEAU</h1>
+		<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
-			<h2>Qui suis je ?</h2>
-			<p>
-				Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solutions.
-				</br>
-				De par ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionnels.
-				</br>
-				Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interressé par la physique et je suis curieux.			
-			</p>
+		<div id="flex-container">
+			<div id="wai">
+				<h2>Qui suis je ?</h2>
+				<p>
+					Je suis un élève ingénieur en informatique français né en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solutions.
+					</br>
+					De par ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionnels.
+					</br>
+					Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interressé par la physique et je suis curieux.			
+				</p>
+			</div>
+			<div id="cur">
+				<h2>Actuellement</h2>
+				<p>
 
-			<h2>Actuellement</h2>
-			<p>
+					J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
+					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
 
-				J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
-				En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
+				</p>
+			</div>
+		</div>
+		<h2>Listes des cours que j'ai suivi dans ma scolarité :</h2>
+		<p>
+		<h3>M2SIF Rennes 1 (2019-2020)</h3>
+				<ul>
+					<li>Fouille de données massives et visualisation</li>
+					<li>Analyse de données et modélisation probabilistique</li>
+					<li>Rédaction d'article scientifique</li>
+				</ul>
 
-			</p>
+			<h3>ENSSAT (2017-2020)</h3>
+				<ul>
+					<li><strong>Mathématiques :</strong>
+						<ul>
+							<li>Logique Mathématiques</li>
+							<li>Analyse</li>
+							<li>Algèbre</li>
+							<li>Analyse discrète et continue</li>
+							<li>Probabilités</li>
+							<li>Statistiques</li>
+							<li>Théorie des files d'attente</li>
+							<li>Cryptographie</li>
+						</ul>
+					<li><strong>Informatique :</strong>
+						<ul>
+							<li>Réseaux</li>
+							<li>Système d'exploitation</li>
+							<li>Bases de C</li>
+							<li>Bases de Java</li>
+							<li>Algorithmique</li>
+							<li>Structure de données</li>
+							<li>Programmation objet</li>
+							<li>Génie logiciel</li>
+							<li>Temps réel</li>
+							<li>Algorithmes distribués</li>
+							<li>Programmation Unix</li>
+							<li>Bases de données relationnelles</li>
+							<li>Bases de données avancées (logique floue)</li>
+							<li>Théorie des langages et compilation</li>
+							<li>Calculabilité</li>
+							<li>Programmation web Client / Serveur</li>
+							<li>Services Web</li>
+							<li>Sécurité des systèmes logiciel</li>
+							<li>Porgrammation déclarative et fonctionnelle</li>
+							<li>Apprentissage Automatique</li>
+							<li>Web Data Management</li>
+							<li>Analyse et fouille de données massives (web sémantique)</li>
+							<li>Traitement automatique du langage et de la parole</li>
+						</ul>
+					<li><strong>Electronique :</strong>
+						<ul>
+							<li>Micro-contrôleurs</li>
+							<li>Bases des systèmes  numériques</li>
+						</ul>
+				</ul>
 
-			<h2>Listes des cours que j'ai suivi dans ma scolarité :</h2>
-			<p>
-			<h3>M2SIF Rennes 1 (2019-2020)</h3>
-					<ul>
-						<li>Fouille de données massives et visualisation</li>
-						<li>Analyse de données et modélisation probabilistique</li>
-						<li>Rédaction d'article scientifique</li>
-					</ul>
-
-				<h3>ENSSAT (2017-2020)</h3>
-					<ul>
-						<li><strong>Mathématiques :</strong>
-							<ul>
-								<li>Logique Mathématiques</li>
-								<li>Analyse</li>
-								<li>Algèbre</li>
-								<li>Analyse discrète et continue</li>
-								<li>Probabilités</li>
-								<li>Statistiques</li>
-								<li>Théorie des files d'attente</li>
-								<li>Cryptographie</li>
-							</ul>
-						<li><strong>Informatique :</strong>
-							<ul>
-								<li>Réseaux</li>
-								<li>Système d'exploitation</li>
-								<li>Bases de C</li>
-								<li>Bases de Java</li>
-								<li>Algorithmique</li>
-								<li>Structure de données</li>
-								<li>Programmation objet</li>
-								<li>Génie logiciel</li>
-								<li>Temps réel</li>
-								<li>Algorithmes distribués</li>
-								<li>Programmation Unix</li>
-								<li>Bases de données relationnelles</li>
-								<li>Bases de données avancées (logique floue)</li>
-								<li>Théorie des langages et compilation</li>
-								<li>Calculabilité</li>
-								<li>Programmation web Client / Serveur</li>
-								<li>Services Web</li>
-								<li>Sécurité des systèmes logiciel</li>
-								<li>Porgrammation déclarative et fonctionnelle</li>
-								<li>Apprentissage Automatique</li>
-								<li>Web Data Management</li>
-								<li>Analyse et fouille de données massives (web sémantique)</li>
-								<li>Traitement automatique du langage et de la parole</li>
-							</ul>
-						<li><strong>Electronique :</strong>
-							<ul>
-								<li>Micro-contrôleurs</li>
-								<li>Bases des systèmes  numériques</li>
-							</ul>
-					</ul>
-
-					<h3>Classe préparatoire (2015-2017)</h3>
-					<p>
-						J'ai étudié dans une classe préparatoire française de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
-					</p>
-					<ul>
-						<li><strong>Mathematiques :</strong></li>
-							<ul>
-								<li>Algèbre linéaire</li>
-								<li>Espace vectoriel normé en dimensions finies</li>
-								<li>Espace Euclidien</li>
-								<li>Fonctions vectorielles et arcs paramétrés</li>
-								<li>Probabilités</li>
-								<li>Calcul différentiel</li>
-							</ul>
-						<li><strong>Physique :</strong></li>
-							<ul>
-								<li>Optique non linéaire</li>
-								<li>Électromagnétisme</li>
-								<li>Mécanique</li>
-								<li>Thermodynamique</li>
-								<li>Physique des ondes</li>
-							</ul>
-						<li><strong>Chimie :</strong></li>
-							<ul>
-								<li>Mélanges et transformations: aspects thermodynamiques</li>
-								<li>Énergie chimique et énergie électrique: conversion et stockage</li>
-								<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
-								<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
-							</ul>
-						<li><strong>Informatique :</strong></li>
-							<ul>
-								<li>Introduction à Python</li>
-								<li>Introduction aux bases de données (mySQL)</li>
-								<li>Modélisation physique</li>
-								<li>Programmation récursive</li>
-							</ul>
-	    		</ul>
-			</p>
+				<h3>Classe préparatoire (2015-2017)</h3>
+				<p>
+					J'ai étudié dans une classe préparatoire française de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
+				</p>
+				<ul>
+					<li><strong>Mathematiques :</strong></li>
+						<ul>
+							<li>Algèbre linéaire</li>
+							<li>Espace vectoriel normé en dimensions finies</li>
+							<li>Espace Euclidien</li>
+							<li>Fonctions vectorielles et arcs paramétrés</li>
+							<li>Probabilités</li>
+							<li>Calcul différentiel</li>
+						</ul>
+					<li><strong>Physique :</strong></li>
+						<ul>
+							<li>Optique non linéaire</li>
+							<li>Électromagnétisme</li>
+							<li>Mécanique</li>
+							<li>Thermodynamique</li>
+							<li>Physique des ondes</li>
+						</ul>
+					<li><strong>Chimie :</strong></li>
+						<ul>
+							<li>Mélanges et transformations: aspects thermodynamiques</li>
+							<li>Énergie chimique et énergie électrique: conversion et stockage</li>
+							<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
+							<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
+						</ul>
+					<li><strong>Informatique :</strong></li>
+						<ul>
+							<li>Introduction à Python</li>
+							<li>Introduction aux bases de données (mySQL)</li>
+							<li>Modélisation physique</li>
+							<li>Programmation récursive</li>
+						</ul>
+    		</ul>
+		</p>
 	</div><!-- /.blurb -->
 
