--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -12,15 +12,18 @@ title: Cyril MOINEAU
     	<h2 id="NCTU">Stage à la NCTU 2019</h2>
     		<h3>Description du stage :</h3>
     		<p>
-    			Pendant l'été 2019, j'ai passé 2 mois à la <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) dans le laboratoire <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC).
+    			Pendant l'été 2019, j'ai passé 2 mois à la <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) à Taïwan dans le laboratoire <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC).
     		</p>
 
     		<p>
     			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano</a> de NVIDIA. 
     		</p>
-    		<p>
-    			A la suite de mon stage, on m'a proposé d'écrire un article pour la conférence <a href="https://www.iscas2020.org/">ISCAS</a>. Je suis en pleine rédaction de cet article.
-    		</p>
+            <!--
+                <h3>Ce que j'ai appris :</h3>
+                <p>
+                    Lors du stage, j'ai pu développer plusieurs compétences. Je me suis familiarisé avec la librairie <a href="https://keras.io/">Keras</a>, ainsi qu'à la création de réseau de neuronne. J'ai aussi pu me pencher sur des 
+                </p>
+            -->
 
     		<h3>Conclusion :</h3>
     		<p>
