--- a/internship/index.html
+++ b/internship/index.html
@@ -12,14 +12,11 @@ title: Cyril MOINEAU
     	<h2 id="NCTU">Internship at the NCTU 2019</h2>
     		<h3>Description of the internship :</h3>
     		<p>
-    			During summer 2019, I spent 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
+    			During summer 2019, I spent 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) Taiwan in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
     		</p>
 
     		<p>
     			During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
-    		</p>
-    		<p>
-    			Eventually, I have been proposed to write an article for the <a href="https://www.iscas2020.org/">ISCAS conference</a>. The paper is being written.
     		</p>
 
     		<h3>Conclusion :</h3>
