--- a/index.html
+++ b/index.html
@@ -2,116 +2,120 @@
 layout: default
 title: Cyril MOINEAU
 ---
-	<div class="blurb">
+	<div class="blurb">    
 		<div id="presentation">
-		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
-		<h1>Cyril MOINEAU</h1>
+			<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
+			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
-			<h2>Who am I ?</h2>
-			<p>
-				I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. I want to know what I am working for, and I am passionate about researching a solution to a problem. 
-				</br>
-				Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
-				</br>
-				I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things !
-			</p>
+		<div id="flex-container">
+			<div id="wai">
+				<h2>Who am I ?</h2>
+				<p>
+					I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
+					I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things !
+					</br>
+					I want to know what I am working for, and I am passionate about researching a solution to a problem. Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
+					
+				</p>
+			</div>
+			<div id="cur">
+				<h2>Currently</h2>
+				<p>
+					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>.
+				</p>
+			</div>
+		</div>
+		<h2>Courses taken</h2>
+		<p>
+		<h3>M2SIF Rennes 1 (2019-2020)</h3>
+				<ul>
+					<li>Data mining and visualisation</li>
+					<li>Data analysis and probabilistic modeling</li>
+					<li>Writting of scientific publications</li>
+				</ul>
 
-			<h2>Currently</h2>
-			<p>
-				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>.
-			</p>
+			<h3>ENSSAT (2017-2020)</h3>
+				<ul>
+					<li><strong>Mathematics :</strong>
+						<ul>
+							<li>Mathematical logic</li>
+							<li>Analysis</li>
+							<li>Algebra</li>
+							<li>Continuous and discrete analysis</li>
+							<li>Probability</li>
+							<li>Statistics</li>
+							<li>Theory of queues</li>
+							<li>Cryptography</li>
+						</ul>
+					<li><strong>Computer science :</strong>
+						<ul>
+							<li>Networking</li>
+							<li>Operating System</li>
+							<li>Basis of C</li>
+							<li>Basis of Java</li>
+							<li>Algorithmics</li>
+							<li>Data structure</li>
+							<li>Oriented Object Programing</li>
+							<li>Software engineering</li>
+							<li>Real time</li>
+							<li>Distributed algorithms</li>
+							<li>Unix programming</li>
+							<li>Relational Databases</li>
+							<li>Advanced Databases (fuzzy logic)</li>
+							<li>Theory of Languages and Compilation</li>
+							<li>Computability</li>
+							<li>Client / Server Web Programming</li>
+							<li>Web Services</li>
+							<li>Security of software systems</li>
+							<li>Declarative and functionnal programming</li>
+							<li>Machine learning</li>
+							<li>Web Data Management</li>
+							<li>Big data mining and analysis (semantic web)</li>
+							<li>Automatic processing of languages and speech</li>
+						</ul>
+					<li><strong>Electronics :</strong>
+						<ul>
+							<li>Microcontrollers</li>
+							<li>Basic digital systems</li>
+						</ul>
+				</ul>
 
-			<h2>Courses taken</h2>
-			<p>
-			<h3>M2SIF Rennes 1 (2019-2020)</h3>
-					<ul>
-						<li>Data mining and visualisation</li>
-						<li>Data analysis and probabilistic modeling</li>
-						<li>Writting of scientific publications</li>
-					</ul>
-
-				<h3>ENSSAT (2017-2020)</h3>
-					<ul>
-						<li><strong>Mathematics :</strong>
-							<ul>
-								<li>Mathematical logic</li>
-								<li>Analysis</li>
-								<li>Algebra</li>
-								<li>Continuous and discrete analysis</li>
-								<li>Probability</li>
-								<li>Statistics</li>
-								<li>Theory of queues</li>
-								<li>Cryptography</li>
-							</ul>
-						<li><strong>Computer science :</strong>
-							<ul>
-								<li>Networking</li>
-								<li>Operating System</li>
-								<li>Basis of C</li>
-								<li>Basis of Java</li>
-								<li>Algorithmics</li>
-								<li>Data structure</li>
-								<li>Oriented Object Programing</li>
-								<li>Software engineering</li>
-								<li>Real time</li>
-								<li>Distributed algorithms</li>
-								<li>Unix programming</li>
-								<li>Relational Databases</li>
-								<li>Advanced Databases (fuzzy logic)</li>
-								<li>Theory of Languages and Compilation</li>
-								<li>Computability</li>
-								<li>Client / Server Web Programming</li>
-								<li>Web Services</li>
-								<li>Security of software systems</li>
-								<li>Declarative and functionnal programming</li>
-								<li>Machine learning</li>
-								<li>Web Data Management</li>
-								<li>Big data mining and analysis (semantic web)</li>
-								<li>Automatic processing of languages and speech</li>
-							</ul>
-						<li><strong>Electronics :</strong>
-							<ul>
-								<li>Microcontrollers</li>
-								<li>Basic digital systems</li>
-							</ul>
-					</ul>
-
-					<h3>Preparatory classes (2015-2017)</h3>
-					<p>
-						I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a> (in French).
-					</p>
-					<ul>
-						<li><strong>Mathematics :</strong></li>
-							<ul>
-								<li>Linear algebra</li>
-								<li>Normed vectorial space in finite dimension</li>
-								<li>Euclidean space</li>
-								<li>Vector function and parametric equation of the curve</li>
-								<li>Probability</li>
-								<li>Diffential calculus</li>
-							</ul>
-						<li><strong>Physics :</strong></li>
-							<ul>
-								<li>Non-linear optics</li>
-								<li>Electromagnetism</li>
-								<li>Mechanic</li>
-								<li>Thermodynamic</li>
-								<li>Wave physics</li>
-							</ul>
-						<li><strong>Chemistry :</strong></li>
-							<ul>
-								<li>Mixtures and transformations: thermodynamic aspects</li>
-								<li>Chemical energy and electrical energy: conversion and storage</li>
-								<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
-								<li>Molecules and organic materials: synthesis strategy and applications</li>
-							</ul>
-						<li><strong>Computer science :</strong></li>
-							<ul>
-								<li>Introduction to Python</li>
-								<li>Introduction to data base (mySQL)</li>
-								<li>Physic modelistation</li>
-								<li>Recursive programming</li>
-							</ul>
-	    		</ul>
-			</p>
+				<h3>Preparatory classes (2015-2017)</h3>
+				<p>
+					I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a> (in French).
+				</p>
+				<ul>
+					<li><strong>Mathematics :</strong></li>
+						<ul>
+							<li>Linear algebra</li>
+							<li>Normed vectorial space in finite dimension</li>
+							<li>Euclidean space</li>
+							<li>Vector function and parametric equation of the curve</li>
+							<li>Probability</li>
+							<li>Diffential calculus</li>
+						</ul>
+					<li><strong>Physics :</strong></li>
+						<ul>
+							<li>Non-linear optics</li>
+							<li>Electromagnetism</li>
+							<li>Mechanic</li>
+							<li>Thermodynamic</li>
+							<li>Wave physics</li>
+						</ul>
+					<li><strong>Chemistry :</strong></li>
+						<ul>
+							<li>Mixtures and transformations: thermodynamic aspects</li>
+							<li>Chemical energy and electrical energy: conversion and storage</li>
+							<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
+							<li>Molecules and organic materials: synthesis strategy and applications</li>
+						</ul>
+					<li><strong>Computer science :</strong></li>
+						<ul>
+							<li>Introduction to Python</li>
+							<li>Introduction to data base (mySQL)</li>
+							<li>Physic modelistation</li>
+							<li>Recursive programming</li>
+						</ul>
+    		</ul>
+		</p>
 	</div><!-- /.blurb -->
