Adding few line to add what i have learnt from my internship.

--- a/internship/fr/index.html
+++ b/internship/fr/index.html
@@ -4,7 +4,7 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<h1>Mon expérience professionnelle</h1>
-		<h2>Sommaire :</h2>
+		<h2 style="text-align: left">Sommaire :</h2>
 		<ul>
 			<li><a href="#NCTU">Stage à la NCTU 2019</a></li>
     		<li><a href="#Metropole">Orléans Métropole 2018</a></li>
@@ -18,12 +18,11 @@ title: Cyril MOINEAU
     		<p>
     			Tout au long de ces 2 mois, j'ai travaillé sur la détection d'émotions en utilisant les signaux ECG (électrocardiogramme) et PPG (photoplethysmogramme). Pour cela, j'ai utilisé un CNN (Réseaux de neurones par convolution) avec la librairie <a href="https://keras.io/">Keras</a> (v2.24). J'ai aussi pu travailler sur des problèmatiques telles que la détection de pics et l'implémentation d'un système temps réel. En effet, l'objectif final du stage était d'implémenter le CNN sur la carte <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano</a> de NVIDIA. 
     		</p>
-            <!--
+            
                 <h3>Ce que j'ai appris :</h3>
                 <p>
-                    Lors du stage, j'ai pu développer plusieurs compétences. Je me suis familiarisé avec la librairie <a href="https://keras.io/">Keras</a>, ainsi qu'à la création de réseau de neuronne. J'ai aussi pu me pencher sur des 
+                    Lors du stage, j'ai pu développer plusieurs compétences. Je me suis familiarisé avec la librairie <a href="https://keras.io/">Keras</a>, ainsi qu'à la création de réseau de neurone. J'ai aussi pu me pencher sur des problématiques telles que la mise en place d'une réception de signaux à l'aide du bluetooth. Je me suis intéressé à des problématiques telles que l'extraction de caractéristique d'un signal biologique.
                 </p>
-            -->
 
     		<h3>Conclusion :</h3>
     		<p>
