--- a/internship/index.html
+++ b/internship/index.html
@@ -2,9 +2,9 @@
 layout: default
 title: Cyril MOINEAU
 ---
-	<div class="blurb">
+	<div class="blurb">        
 		<h1>My work experiences</h1>
-		<h2>Summary :</h2>
+		<h2 style="text-align: left">Summary :</h2>
 		<ul>
 			<li><a href="#NCTU">Internship at the NCTU 2019</a></li>
     		<li><a href="#Metropole">Orléans Métropole 2018</a></li>
@@ -18,7 +18,12 @@ title: Cyril MOINEAU
     		<p>
     			During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
     		</p>
-
+            
+                <h3>What I have learned :</h3>
+                <p>
+                    During the internship, I have been able to learn new skills. I used the library <a href="https://keras.io/">Keras</a>, in order to create neural network. I also had the opportunity to work on problems such as the reception of a bluetooth signal and the extraction of characteristics on biological signals.
+                </p>
+            
     		<h3>Conclusion :</h3>
     		<p>
     			This internship was a very good first experience of the world of research. I can't thank enough the people that welcomed me at the NCTU and made these two months such a beneficial experience. I have been able to understand the difficulties related to working in a research laboratory. Even if the thematic was not in the scope of what I have done at school, I was really eager to learn. These two months confirmed my desire to do research.
@@ -29,12 +34,12 @@ title: Cyril MOINEAU
     	    <h3>Description of the internship :</h3>
     		<p>I spend 2 months during summer 2018 at the <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a> at the Information Systems Division (ISD). This summer, I worked on two different topics.
     		</p>
-    		<p>
-    			1. Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
-    		</p>
-			<p>
-    			2. Management of the Active Directory (AD). The AD of the metropole had a lot of users who were supposed to be gone. My work was to found these users and to remove them. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
-    		</p>
+    		<ol>
+    			<li> Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
+    		    </li>
+    			<li> Management of the Active Directory (AD). The AD of the metropole had a lot of users who were supposed to be gone. My work was to found these users and to remove them. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
+                </li>
+    		</ol>
     		<h3>Conclusion :</h3>
     		<p>
     			This was my first technical internship. I have learnt a lot, and I was given responsabilities. Most particularly for the cleaning of the AD, where a mistake could have lead to the supression of a worker's account.  
