--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@ title: Cyril MOINEAU
 			<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 8em; height: 9.5em; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
 			<h1 style="float: left;">Cyril MOINEAU</h1>
 		</div>
+
+		
 		<div id="flex-container">
 			<div id="wai">
 				<h2>Who am I ?</h2>
@@ -25,7 +27,13 @@ title: Cyril MOINEAU
 				</p>
 			</div>
 		</div>
-		<h2>Courses taken</h2>
+		<h2>Courses taken 
+
+			<i id="b_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('course_taken').style.display='block';document.getElementById('b_hide').style.display='initial';document.getElementById('b_show').style.display='none';"></i> 
+
+			<i id="b_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('course_taken').style.display='none';document.getElementById('b_hide').style.display='none';document.getElementById('b_show').style.display='initial';" style="display:none;"></i></h2>
+		
+		<div id="course_taken" style="display:none;">
 		<p>
 		<h3>M2SIF Rennes 1 (2019-2020)</h3>
 				<ul>
@@ -118,4 +126,5 @@ title: Cyril MOINEAU
 						</ul>
     		</ul>
 		</p>
+		</div>
 	</div><!-- /.blurb -->
