--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<h1>My projects</h1>
-		<h2>Summary</h2>
+		<h2 style="text-align: left">Summary</h2>
 		<ul>
     		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
         	<li><a href="#BomberBall">BomberBall</a></li>
@@ -53,13 +53,13 @@ title: Cyril MOINEAU
 	    			The Ada Lovelace project was my first experience with so many partners, it was a good experience in working and coordinating people who are far from each other.
 	    		</p>
 
-	    	<h3>Link to some articles about the challenge Ada Lovelace :</h3>
+	    	<h3>Links to some articles about the challenge Ada Lovelace :</h3>
 	    	<ul>
 	    		<li>Article from <a href="https://www.ouest-france.fr/bretagne/lannion-22300/lannion-au-lycee-les-filles-font-parler-leur-science-6287822">Ouest France</a></li>
 		    	<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/ada-lovelace-des-nouveautes-pour-le-concours-20-03-2019-12237099.php">Télégramme</a></li>
 	    	</ul>
 			
-	    	<h3>Link to some articles about the Hackathon :</h3>
+	    	<h3>Links to some articles about the Hackathon :</h3>
 		    	<ul>
 		    		<li>Article from <a href="https://www.ouest-france.fr/bretagne/lannion-22300/six-equipes-au-marathon-du-code-hackathon-6267065">Ouest France</a></li>
 	    			<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/hackathon-une-appli-au-bout-de-la-nuit-18-03-2019-12235588.php">Télégramme</a></li>
@@ -75,7 +75,7 @@ title: Cyril MOINEAU
     		<h3>The result :</h3>
     			<p>You can see the project on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
     			And here you can watch a small video we made to show the result during the final presentation :
-
+    			</br></br>
     			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/0CLnEmHGonU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     			</p>
 	</div><!-- /.blurb -->
