Hidding lessons I had.

--- a/fr/index.html
+++ b/fr/index.html
@@ -21,28 +21,30 @@ title: Cyril MOINEAU
 			<div id="cur">
 				<h2>Actuellement</h2>
 				<p>
-
 					J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
 					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
 
 				</p>
 			</div>
 		</div>
-		
-		<h2>Cours que j'ai suivi dans ma scolarité  
-			<i id="b_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('course_taken').style.display='initial';document.getElementById('b_hide').style.display='initial';document.getElementById('b_show').style.display='none';"></i> 
 
-			<i id="b_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('course_taken').style.display='none';document.getElementById('b_hide').style.display='none';document.getElementById('b_show').style.display='initial';" style="display:none;"></i></h2>
-		<div id="course_taken" style="display:none;">
-		<p>
-		<h3>M2SIF Rennes 1 (2019-2020)</h3>
+		<h2>Formation</h2>
+		<h3>Master Recherche en informatique Rennes 1 (2019-2020) 
+			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
+
+			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
+			<div id="msif" style="display:none;">
 				<ul>
 					<li>Fouille de données massives et visualisation</li>
 					<li>Analyse de données et modélisation probabilistique</li>
 					<li>Rédaction d'article scientifique</li>
 				</ul>
+			</div>
+			<h3>ENSSAT école d'ingénieur (2017-2020) 
+			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
 
-			<h3>ENSSAT (2017-2020)</h3>
+			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
+			<div id="enssat" style="display:none;">
 				<ul>
 					<li><strong>Mathématiques :</strong>
 						<ul>
@@ -87,8 +89,12 @@ title: Cyril MOINEAU
 							<li>Bases des systèmes  numériques</li>
 						</ul>
 				</ul>
+			</div>
+				<h3>Classe préparatoire (2015-2017) 
+			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
 
-				<h3>Classe préparatoire (2015-2017)</h3>
+			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
+			<div id="prep" style="display:none;">
 				<p>
 					J'ai étudié dans une classe préparatoire française de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
 				</p>
@@ -125,7 +131,6 @@ title: Cyril MOINEAU
 							<li>Programmation récursive</li>
 						</ul>
     		</ul>
-		</p>
 	</div>
 	</div><!-- /.blurb -->
 
