--- a/index.html
+++ b/index.html
@@ -27,22 +27,24 @@ title: Cyril MOINEAU
 				</p>
 			</div>
 		</div>
-		<h2>Courses taken 
-
-			<i id="b_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('course_taken').style.display='block';document.getElementById('b_hide').style.display='initial';document.getElementById('b_show').style.display='none';"></i> 
-
-			<i id="b_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('course_taken').style.display='none';document.getElementById('b_hide').style.display='none';document.getElementById('b_show').style.display='initial';" style="display:none;"></i></h2>
+		<h2>Education</h2>
 		
-		<div id="course_taken" style="display:none;">
-		<p>
-		<h3>M2SIF Rennes 1 (2019-2020)</h3>
+		<h3>M2SIF Rennes 1 (2019-2020) 
+			<i id="1_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('msif').style.display='block';document.getElementById('1_hide').style.display='initial';document.getElementById('1_show').style.display='none';"></i> 
+
+			<i id="1_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('msif').style.display='none';document.getElementById('1_hide').style.display='none';document.getElementById('1_show').style.display='initial';" style="display:none;"></i></h3>
+			<div id="msif" style="display:none;">
 				<ul>
 					<li>Data mining and visualisation</li>
 					<li>Data analysis and probabilistic modeling</li>
 					<li>Writting of scientific publications</li>
 				</ul>
+			</div>
+			<h3>ENSSAT (2017-2020) 
+			<i id="2_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('enssat').style.display='block';document.getElementById('2_hide').style.display='initial';document.getElementById('2_show').style.display='none';"></i> 
 
-			<h3>ENSSAT (2017-2020)</h3>
+			<i id="2_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('enssat').style.display='none';document.getElementById('2_hide').style.display='none';document.getElementById('2_show').style.display='initial';" style="display:none;"></i></h3>
+			<div id="enssat" style="display:none;">
 				<ul>
 					<li><strong>Mathematics :</strong>
 						<ul>
@@ -87,8 +89,12 @@ title: Cyril MOINEAU
 							<li>Basic digital systems</li>
 						</ul>
 				</ul>
+			</div>
+			<h3>Preparatory classes (2015-2017) 
+			<i id="3_show" class="fa fa-arrow-circle-down" aria-hidden="true" onclick="document.getElementById('prep').style.display='block';document.getElementById('3_hide').style.display='initial';document.getElementById('3_show').style.display='none';"></i> 
 
-				<h3>Preparatory classes (2015-2017)</h3>
+			<i id="3_hide" class="fa fa-arrow-circle-up" aria-hidden="true" onclick="document.getElementById('prep').style.display='none';document.getElementById('3_hide').style.display='none';document.getElementById('3_show').style.display='initial';" style="display:none;"></i></h3>
+			<div id="prep" style="display:none;">
 				<p>
 					I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a> (in French).
 				</p>
@@ -124,7 +130,6 @@ title: Cyril MOINEAU
 							<li>Physic modelistation</li>
 							<li>Recursive programming</li>
 						</ul>
-    		</ul>
-		</p>
-		</div>
+				</ul>
+			</div>
 	</div><!-- /.blurb -->
