Màj information stage SHAMAN.

--- a/fr/index.html
+++ b/fr/index.html
@@ -15,14 +15,14 @@ title: Cyril MOINEAU
 					</br>
 					De par ma formation d'ingénieur, le monde de l'entreprise et la recherche appliquée sont mes objectifs professionnels.
 					</br>
-					Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interressé par la physique et je suis curieux.			
+					Je suis passionné par l'apprentissage automatique et l'exploration de données, mais je suis aussi interressé par la physique et curieux de manière générale.			
 				</p>
 			</div>
 			<div id="cur">
 				<h2>Actuellement</h2>
 				<p>
 					J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur française. 
-					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
+					En parallèle, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>. Je suis actuellement en stage de fin d'étude dans l'équipe <a href="http://www-shaman.irisa.fr/">Shaman</a> de l'IRISA, sous la supervision de mon maître de stage <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
 
 				</p>
 			</div>
