--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@ title: Cyril MOINEAU
 				<h2>Who am I ?</h2>
 				<p>
 					I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. 
-					I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things !
+					I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things in general !
 					</br>
-					I want to know what I am working for, and I am passionate about researching a solution to a problem. Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
-					
+					I want to know what I am working for, and I am passionate about research. Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
 				</p>
 			</div>
 			<div id="cur">
 				<h2>Currently</h2>
 				<p>
-					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>.
+					I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineering school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>. I am currently in an end study internship in the <a href="http://www-shaman.irisa.fr/">Shaman</a> Team under the supervision of <a href="http://people.irisa.fr/Gregory.Smits/"> Gregory Smits</a>.
 				</p>
 			</div>
 		</div>
